--- a/Beranda.html
+++ b/Beranda.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <title>Profil Diri</title>
 </head>
 <body>
@@ -9,14 +10,15 @@
 <h1>  </h1>
 <ol>
 	<li>Nama &nbsp;&nbsp; : Ahmad Ahdani Dzikron</li>
-	<li>NIM &nbsp;&nbsp;&nbsp;&nbsp; : 195150200111010</li>
+	<li><p id="aidi">NIM &nbsp;&nbsp;&nbsp;&nbsp; : 195150200111010<p></li>
 	<li>Alamat&nbsp; : Jalan Kolonel Sugiono 3B no. 103 Mergosono, Kedungkandang</li>
 	<li>Jurusan : Teknik Informatika</li>
 	<li>Foto Diri</li>
 	<a href="https://www.instagram.com/ahdani_dz/"> 
 	<img src="ahdani.jpg" width="150" height="200" alt="Pas Foto 3x4" /> </a>
 <li>Riwayat Organisasi</li>
-    <table>
+	<hr>
+    <table class="satu">
         <tr>
             <td>&nbsp;&nbsp;&nbsp;No.&nbsp;&nbsp; </td>
             <td>Uraian</td>
@@ -33,8 +35,10 @@
 			<td>Pesantren</td>
         </tr>
     </table>
+	<hr>
 	<li>Jenjang Pendidikan</li>
-	<table>
+	<hr>
+	<table class="dua">
         <tr>
             <td>&nbsp;&nbsp;&nbspNo.&nbsp;&nbsp; </td>
             <td>Jenjang &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
@@ -55,14 +59,16 @@
             <td>SMP</td>
 			<td>MTs Ma'arif Ambulu</td>
         </tr>
-				<tr>
+			<tr>
             <td>&nbsp;&nbsp;&nbsp4.</td>
             <td>SMA</td>
 			<td>SMA Negeri 1 Jember</td>
         </tr>
     </table>
-		<li>Mata Kuliah Semester 1</li>
-	<table>
+	<hr>
+	<li>Mata Kuliah Semester 1</li>
+		<hr>
+	<table class="satu">
         <tr>
             <td>&nbsp;&nbsp;&nbspNo. &nbsp;&nbsp; </td>
             <td>Nama MK</td>
@@ -106,6 +112,7 @@
 			<td>⭐⭐⭐⭐</td>
         </tr>
     </table>
+	<hr>
 </ol> 
 <a href="index.html" >kembali</a>
 </body>
