--- a/Hubungi Saya.html
+++ b/Hubungi Saya.html
@@ -2,22 +2,24 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <title>Biodata Diri</title>
 </head>
 <body>
 <h1>Hubungi Saya</h1>
 <h1>  </h1>
 <h1>  </h1>
-<form action="index.html" method="post">
+<form>
 <label>Nama Pengunjung Web:</label>
-<input type="text" name=""><br>
-<label>Email :</label>
-<input type="text" name=""><br>
+<input id="aidi" class="satu" type="text" name=""><br>
+<label >Email :</label>
+<input class="satu" type="text" name=""><br>
 <label>No. Telp :</label>
-<input type="text" name=""><br>
+<input class="satu" type="text" name=""><br>
 <label>Pesan yang ingin disampaikan :</label><br>
-<textarea name="" rows="10" cols="30"></textarea><br>
-<input type="submit" value="Kirim Pesan">
+<textarea class="dua" name="" rows="10" cols="30"></textarea><br>
+<input type="submit" name="" value="Kirim Pesan" formaction="index.html">
+
 </form>
 </body>
 </html>
