--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <title>Biodata Diri</title>
 </head>
 <body>
 	<table>
         <tr>
             <td><a href="https://www.instagram.com/ahdani_dz/"> 
-			<img src="ahdani.jpg" width="150" height="200" alt="Pas Foto 3x4" />
+			<img class="lingkar "src="ahdani.jpg" width="150" height="200" alt="Pas Foto 3x4" />
 			</a></td>
 			<td><h1>Ahmad Ahdani Dzikron</h1>
-			<p>NIM &nbsp;&nbsp;&nbsp;&nbsp; : 195150200111010</p>
-			<p>Alamat&nbsp; : Jalan Kolonel Sugiono 3B no. 103 Mergosono, Kedungkandang</p>
-			<p>Jurusan : Teknik Informatika</p></td>
+			<p id="aidi">NIM &nbsp;&nbsp;&nbsp;&nbsp; : 195150200111010</p>
+			<p class="dua">Alamat&nbsp; : Jalan Kolonel Sugiono 3B no. 103 Mergosono, Kedungkandang</p>
+			<p class="dua">Jurusan : Teknik Informatika</p></td>
         </tr>
     </table>
 <h1>  </h1>
 <h1>  </h1>
-<a href="Beranda.html" >Beranda</a> <a href="Hubungi Saya.html" >Hubungi Saya</a>
+<a class="satu" href="Beranda.html" >Beranda</a> <a class="satu" href="Hubungi Saya.html" >Hubungi Saya</a>
 </body>
 </html>
