--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
-<title>Biodata Diri</title>
+<title>Home</title>
 </head>
 <body>
 	<table>
