--- a/Hubungi Saya.html
+++ b/Hubungi Saya.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="mystyle.css">
-<title>Biodata Diri</title>
+<title>Hubungi Saya</title>
 </head>
 <body>
 <h1>Hubungi Saya</h1>
